attempt at fixing dark mode issue, only in main.html for now

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root {
+    color-scheme:       only light;
     /* colors */
     --color-dark:       rgb(18, 18, 61);
     --color-dark-rgb:   18, 18, 61;
